--- a/GeneralStore.MVC/GeneralStore.MVC.csproj
+++ b/GeneralStore.MVC/GeneralStore.MVC.csproj
@@ -172,16 +172,17 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\TransactionController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202003241447419_InitialCreate.cs" />
-    <Compile Include="Migrations\202003241447419_InitialCreate.Designer.cs">
-      <DependentUpon>202003241447419_InitialCreate.cs</DependentUpon>
+    <Compile Include="Migrations\202003250035427_restart.cs" />
+    <Compile Include="Migrations\202003250035427_restart.Designer.cs">
+      <DependentUpon>202003250035427_restart.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202003241755373_addingCustomerTable.cs" />
-    <Compile Include="Migrations\202003241755373_addingCustomerTable.Designer.cs">
-      <DependentUpon>202003241755373_addingCustomerTable.cs</DependentUpon>
+    <Compile Include="Migrations\202003250112442_customerClassFix.cs" />
+    <Compile Include="Migrations\202003250112442_customerClassFix.Designer.cs">
+      <DependentUpon>202003250112442_customerClassFix.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -189,6 +190,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -258,9 +260,19 @@
     <Content Include="Views\Customer\Delete.cshtml" />
     <Content Include="Views\Customer\Edit.cshtml" />
     <Content Include="Views\Customer\Details.cshtml" />
+    <Content Include="Views\Transaction\Index.cshtml" />
+    <Content Include="Views\Transaction\Create.cshtml" />
+    <Content Include="Views\Transaction\Delete.cshtml" />
+    <Content Include="Views\Transaction\Details.cshtml" />
+    <Content Include="Views\Transaction\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <EmbeddedResource Include="Migrations\202003250035427_restart.resx">
+      <DependentUpon>202003250035427_restart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003250112442_customerClassFix.resx">
+      <DependentUpon>202003250112442_customerClassFix.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -274,14 +286,6 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\202003241447419_InitialCreate.resx">
-      <DependentUpon>202003241447419_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202003241755373_addingCustomerTable.resx">
-      <DependentUpon>202003241755373_addingCustomerTable.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
